# rsdk

./: BUILD.md  Cargo.toml  INTERNALS.md  README.md  install.sh  justfile  release.sh  rsdk.json  rsdk.plugin.zsh
.github/workflows/: release.yml
bash/: rsdk.sh
dev/: Install-Module.ps1  install-bash  install-fish  install-zsh
docs/: demo.tape
scripts/: install.ps1  install.sh
src/: api.rs  api_decode.rs  archive.rs  archive_extract.rs  args.rs  cache.rs  cli_style.rs  dir.rs  download.rs  extract.rs  home.rs  http.rs  http_client.rs  http_utils.rs  lib.rs  main.rs  rcfile.rs  rsdk_home.rs  rsdk_home_dir.rs  sdkman_client.rs  sdkman_decode.rs  shell.rs  tool_version.rs  tui.rs  utils.rs  version.rs
template/publish/: rsdk.json
templates/bash/: rsdk.bash
templates/fish/: rsdk.fish  rsdk_plugin.fish
templates/powershell/: Rsdk.psd1  Rsdk.psm1
templates/zsh/: rsdk.zsh
tests/: env_handling.rs
