[package]
name = "rsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
directories = "5"
log = "0.4"
env_logger = "0.11"
symlink = "0.1"
anyhow = "1.0"
indicatif = "0.17"
#tempfile = "3"
md5 = "0.7"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }

[target.'cfg(windows)'.dependencies]
zip = "2.2"

# POSIX-specific dependencies
[target.'cfg(unix)'.dependencies]
tar = "0.4"
flate2 = "1.0"

[profile.release]
opt-level = "z"              # Optimize for binary size
lto = "fat"                  # Link-time optimization across all crates
codegen-units = 1            # Single codegen unit for better optimizations
