[package]
name = "rsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
directories = "5"
log = "0.4"
env_logger = "0.11"
symlink = "0.1"
anyhow = "1.0"
indicatif = "0.17"
sha = "1"
md5 = "0.7"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
serde_ini = "0.2"
serde_derive = "1"
serde = { version = "1.0.213", features = ["derive"] }

[profile.release]
opt-level = "z"              # Optimize for binary size
lto = "fat"                  # Link-time optimization across all crates
codegen-units = 1            # Single codegen unit for better optimizations
