[package]
name = "rsdk"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
directories = "6"
log = "0.4"
env_logger = "0.11"
symlink = "0.1"
eyre = "0.6"
color-eyre = "0.6"
colored = "2"
#anyhow = "1.0"
indicatif = "0.17"
sha = "1"
md5 = "0.7"
# Use rustls (pure-Rust TLS) instead of the default native-tls/openssl so the
# binary stays self-contained and doesn't need system OpenSSL dev libraries.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "rustls-tls"] }
zip = "2"
tar = "0.4"
flate2 = "1"
tempfile = "3"

serde_ini = "0.2"
serde_derive = "1"
serde = { version = "1.0.213", features = ["derive"] }


crossterm = "0.28.1"
ratatui = { version = "0.29", features = ["all-widgets"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"              # Optimize for binary size
lto = "fat"                  # Link-time optimization across all crates
codegen-units = 1            # Single codegen unit for better optimizations
panic = "abort"              # No unwinding tables; smaller binary, fine for a CLI
strip = true                 # Drop debug symbols from the shipped binary
